--- a/wiki/3rdPartyPlugins.wiki
+++ b/wiki/3rdPartyPlugins.wiki
@@ -16,4 +16,4 @@ Others have written some and publish them on their own sites
     * [http://cr-documentor.googlecode.com CR_Documentor] - Allows you to preview your XML documentation comments as they'll be rendered in compiled help.
     * [http://cr-codetweet.googlecode.com CR_CodeTweet] - Select some code in VS, right click, and send a link to that snippet on Twitter.
   * Steven Rasmussen
-    * [http://community.devexpress.com/forums/p/95376/327744.aspx#327744 ] - Change the target framework of your project or solution.
+    * [http://community.devexpress.com/forums/p/95376/327744.aspx#327744 ChangeTargetFramework] - Change the target framework of your project or solution.
