--- a/wiki/DX_ZenCoding.wiki
+++ b/wiki/DX_ZenCoding.wiki
@@ -7,8 +7,11 @@ This plugin is an addition to the Template expansion engine within !CodeRush. It
 ==== Configuration ====
  * Install plugin as usual.
  * Import the HTML templates found in !Html_Zen.xml (in the zip file)
+   * Visit the Editor\Templates options page
+   * Change the language to HTML
+   * Right click the Template tree and choose Import templates
+   * Locate and select the !Html_Zen.xml file
  * Shortcut Options (!DevExpress\Options IDE\Shortcuts)
-   * Update the existing '!TemplateExpand' shortcut (Code\Expansion)
    * Create a new shortcut.
      * Assign a key to !ZenExpand. 
 
