--- a/wiki/CR_ReSharperCompatibility.wiki
+++ b/wiki/CR_ReSharperCompatibility.wiki
@@ -13,15 +13,13 @@ The shortcut xml files should be extracted to your Settings.xml\IDE folder. You 
 Also you can type "%!AppData%\!CodeRush for VS.Net\" into your address bar and hit Enter
 
 = Support =
-Several Resharper functions are now supported:
+Several Resharper functions are now supported using either VS or IntelliJ style key bindings
 
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ReSharperCompatibility/Screenshots/ShortcutVS1.png
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ReSharperCompatibility/Screenshots/ShortcutsVS1.png
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ReSharperCompatibility/Screenshots/ShortcutsVS2.png
 
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ReSharperCompatibility/Screenshots/ShortcutVS2.png
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ReSharperCompatibility/Screenshots/ShorctutsIntelliJ1.png
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ReSharperCompatibility/Screenshots/ShorctutsIntelliJ1.png
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ReSharperCompatibility/Screenshots/ShortcutsIntelliJ1.png
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ReSharperCompatibility/Screenshots/ShortcutsIntelliJ2.png
 
 = Source = 
 Coderush, like this plugin, is build on top of the [http://devexpress.com/dxcore DXCore] and the source to this plugin as with all [http://code.google.com/p/dxcorecommunityplugins others on this site] is available free to all.
