--- a/wiki/DX_CustomCollapse.wiki
+++ b/wiki/DX_CustomCollapse.wiki
@@ -1,7 +1,7 @@
 #summary Provides an Action to allow you to collapse (not quite) everything
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/DX_CustomCollapse/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-
+===== Requires DXCore 10.2 since build 1492 =====
 === Introduction ===
 
 Provides the "Custom Collapse" action, which allows you to [http://rorybecker.blogspot.com/2009/08/how-to-bind-key-in-coderush.html bind a key] which will then collapse a configured list of element Types in your file. 
