Edited wiki page DefaultSidebar through web user interface.

--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -33,6 +33,7 @@
     * [CR_NavigateToDefinition]
     * [CR_ClearAllMarkers]
     * [CR_MarkerCloseOnCollect]
+    * [DX_TabNav]
   * Decorative Plugins
     * [CR_MethodPreview]
     * [CR_MetricShader]
