--- a/wiki/CR_MethodPreview.wiki
+++ b/wiki/CR_MethodPreview.wiki
@@ -3,7 +3,7 @@
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_MethodPreview/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]    
 [http://tv.devexpress.com/CRMethodPreview.movie http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Screencast.png]  [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-
+===== Requires DXCore 10.2 since build 1491 =====
 = Introduction =
 
 Provides an action 'ToggleMethodPreview' actionable from any method call whose source is available and provides that source as a preview window.
