--- a/wiki/CR_NavigateToDefinition.wiki
+++ b/wiki/CR_NavigateToDefinition.wiki
@@ -2,6 +2,7 @@
 
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_NavigateToDefinition/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]            [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 
+==== Requires DXCore 10.2 since build 1510 ====
 ==== Requires DXCore 10.1 since build 1257 ====
 
 = Introduction =
