--- a/wiki/CR_ClassCleaner.wiki
+++ b/wiki/CR_ClassCleaner.wiki
@@ -1,7 +1,7 @@
 #summary Organizes your code (optionally using regions) based on settings provided.
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_ClassCleaner http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-
+===== Requires DXCore 10.2 since build 1479 =====
 === Introduction ===
 The !ClassCleaner plugin features the ability to:
  * Organize a class and create regions
