--- a/wiki/CR_CreateTestMethod.wiki
+++ b/wiki/CR_CreateTestMethod.wiki
@@ -2,8 +2,7 @@
 
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_CreateTestMethod/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-
-
+===== Requires DXCore 10.2 since build 1533 =====
 = Introduction =
 
 There are a number of things introduced by this plugin which are intended to make Test Drivent Development easier.  These include:
