--- a/wiki/UnitTestErrorVisualizer.wiki
+++ b/wiki/UnitTestErrorVisualizer.wiki
@@ -1,7 +1,7 @@
 This plug-in provides various ways to better interact with the results of the CodeRush Unit Test Runner.
 
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/UnitTestErrorVisualizer/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]  [http://dxcorecommunityplugins.googlecode.com/svn/trunk/UnitTestErrorVisualizer/Screenshots/UnitTestErrorVisualizer_Demo.swf http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Screencast.png]    [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-
+===== Requires DXCore 10.2 since build 1547 =====
 = Introduction =
 
 The new Unit Test Runner in CodeRush 9.3.2 is nice. But I felt the built in on-screen pass/fail information was too sublte or lacking. I wanted more insight on the test results; in particular those that failed. This plug-in provides a few ways to get more information about the results of a test run.
