--- a/wiki/CR_BlockPainterPlus.wiki
+++ b/wiki/CR_BlockPainterPlus.wiki
@@ -2,7 +2,7 @@
 #labels Phase-Support
 
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_BlockPainterPlus/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-
+===== Requires DXCore 10.2 since build 1552 =====
 = Introduction =
 
 This plugin assists the developer by painting information at the end of code blocks to identify which block of code just ended. This is particularly useful when there are multiple nested blocks of code or they are unusually long.
