--- a/wiki/CR_Loop.wiki
+++ b/wiki/CR_Loop.wiki
@@ -1,9 +1,11 @@
 #summary Provides a TextCommand (Loop) which expands a template multiple times.
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_Loop http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
+[http://tv.devexpress.com/CRLoopTextCommand.movie http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Screencast.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
+
 ===== Requires DXCore 10.2 since build 1550 =====
 === Introduction ===
-Provides a !TextCommand (Loop) which expands a template multiple times.
+Provides a !TextCommand (Loop) which expands a template multiple times. This plugin was initially created in response to a customer suggestion and was [http://community.devexpress.com/blogs/markmiller/archive/2011/01/06/wpf-amp-silverlight-grids-faster-creation-using-coderush-templates-and-a-custom-plug-in.aspx blogged about by Mark Miller here]
 
 === Usage ===
 Use the following syntax in Templates and other places where !TextCommands are appropriate
