Edited wiki page RoryBecker through web user interface.

--- a/wiki/RoryBecker.wiki
+++ b/wiki/RoryBecker.wiki
@@ -68,7 +68,7 @@ Feel free to contact me about these plugins
  * Twitter: http://twitter.com/RoryBecker
  * Email: !RoryBecker@gmail.com
  * Blog: http://rorybecker.blogspot.com
-
+Since ~June/July 2010 I have also been doing some work directly for !DevExpress. You can also reach me via roryb@!DevExpress.com
 
 === Stuff I want to fix on this site ===
  * Write a better Front page
