--- a/wiki/CR_SmartGenerics.wiki
+++ b/wiki/CR_SmartGenerics.wiki
@@ -6,6 +6,8 @@
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_SmartGenerics/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 
+*Requires DXCore 10.2 since build 1513*
+
 = Disclaimer =
 
 This plugin works only for c#.
