--- a/wiki/CR_SmartQuotes.wiki
+++ b/wiki/CR_SmartQuotes.wiki
@@ -6,6 +6,8 @@
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_SmartQuotes/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 
+Requires DXCore 10.2 since build 1480
+
 = Introduction =
 
 This plugin brings auto complete of quotes to CodeRush. Features are based on auto complete of parens and brackets, which are supported out of the box:
