Edited wiki page CR_RemoveRegions through web user interface.

--- a/wiki/CR_RemoveRegions.wiki
+++ b/wiki/CR_RemoveRegions.wiki
@@ -1,6 +1,7 @@
 #summary Refactoring to remove all regions in a file.
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_RemoveRegions http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
+===== Requires DXCore 10.2 since build 1579 =====
 === Introduction ===
 Provides a refactoring that removes all region directives in a file.
 
