--- a/wiki/Refactor_FormatAssignments.wiki
+++ b/wiki/Refactor_FormatAssignments.wiki
@@ -2,7 +2,7 @@
 #labels Phase-Support
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/Refactor_FormatAssignments/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-
+===== Requires DXCore 10.2 since build 1594 =====
 = Introduction =
 Forum thread: http://community.devexpress.com/forums/t/64641.aspx
 
