--- a/wiki/DX_RedundantAssignment.wiki
+++ b/wiki/DX_RedundantAssignment.wiki
@@ -3,11 +3,14 @@
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 ===== Requires DXCore 10.2 since build 1601 =====
 = Introduction =
-Provides an additional !CodeIssue to warn whena variable is being assigned to itself.
+Provides an additional !CodeIssue to warn when a variable is being assigned to itself.
+
+Also provides a Refactoring (also available from the CodeIssue) which removes the assignment entirely.
 
 = Usage =
 These rules will work as long as the !CodeIssues function is turned on. 
 
 Note: The !CodeIssues feature is NOT available in !CodeRush Xpress.
+However the Refactoring will still available under CodeRush Xpress
 = Credits =
 RoryBecker
