Edited wiki page DX_RedundantAssignment through web user interface.

--- a/wiki/DX_RedundantAssignment.wiki
+++ b/wiki/DX_RedundantAssignment.wiki
@@ -11,6 +11,6 @@ Also provides a Refactoring (also available from the !CodeIssue) which removes t
 These rules will work as long as the !CodeIssues function is turned on. 
 
 Note: The !CodeIssues feature is NOT available in !CodeRush Xpress.
-However the Refactoring will still available under CodeRush Xpress
+However the Refactoring will still available under !CodeRush Xpress
 = Credits =
 RoryBecker
