--- a/wiki/DX_CloseFiles.wiki
+++ b/wiki/DX_CloseFiles.wiki
@@ -1,12 +1,12 @@
-#summary Provides an action to close all files except the current one and it's Test equivalent.
+#summary Provides an action/command to close all files except the current one and it's Test equivalent.
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/DX_CloseFiles http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 ===== Requires DXCore 10.2 since build 1711 =====
 == Introduction ==
-Provides an action to close all files except the current one and it's Test equivalent.
+Provides an action/command to close all files except the current one and it's Test equivalent.
 
 == Configuration ==
-Use [http://community.devexpress.com/blogs/rorybecker/archive/2010/10/05/binding-keys-in-coderush.aspx these instructions] to bind the 'CloseAllButThisAndTestDocument' command to a key of your choice.
+Use [http://community.devexpress.com/blogs/rorybecker/archive/2010/10/05/binding-keys-in-coderush.aspx these instructions] to bind the '!CloseAllButThisAndTestDocument' command to a key of your choice.
 
 == Usage ==
 Use the key in you bound at configuration whilst within a class to preserve that file and any other which is named after that class with a '_tests' suffix.
