--- a/wiki/CR_ExtensionMethodsHelper.wiki
+++ b/wiki/CR_ExtensionMethodsHelper.wiki
@@ -3,11 +3,11 @@
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 ===== Requires DXCore 10.2 since build 1728 =====
 
-= Introduction =
+== Introduction ==
 Adds a !CodeProvider which adds missing namespace references for extension methods.
 
-= Usage =
-Access the codeprovider through the CodeRush\Refactor key (Default Ctrl+`) and choose xxxx
+== Usage ==
+Access the codeprovider through the !CodeRush\Refactor key (Defaults to Ctrl+`) and choose *Add Namespace Reference*
 
-= Credits =
+== Credits ==
 [http://Skorkin.com/ Alex Skorkin]
