--- a/wiki/CR_ExtensionMethodsHelper.wiki
+++ b/wiki/CR_ExtensionMethodsHelper.wiki
@@ -4,7 +4,10 @@
 ===== Requires DXCore 10.2 since build 1728 =====
 
 == Introduction ==
-Adds a !CodeProvider which adds missing namespace references for extension methods.
+
+This plugin was created in response to a user request. Mark Miller [http://community.devexpress.com/blogs/markmiller/archive/2011/03/23/importing-namespace-references-for-extension-methods-in-coderush-for-visual-studio.aspx blogs about this in full here]
+
+The plugin adds a !CodeProvider which adds missing namespace references for extension methods.
 
 == Usage ==
 Access the codeprovider through the !CodeRush\Refactor key (Defaults to Ctrl+`) and choose *Add Namespace Reference*
