--- a/wiki/Refactor_NamedParameters.wiki
+++ b/wiki/Refactor_NamedParameters.wiki
@@ -1,7 +1,7 @@
 #summary Refactoring which changes a method call to use named parameters.
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/Refactor_NamedParameters/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Requires DXCore 10.2 since build =====
+===== Requires DXCore 10.2 since build 1744=====
 ****This page is temporary Nothing on here is confirmed yet *****
 === Introduction ===
 
