--- a/wiki/DX_ReviseSelection.wiki
+++ b/wiki/DX_ReviseSelection.wiki
@@ -4,19 +4,19 @@
 ===== Requires DXCore 10.2 since build 1742=====
 === Introduction ===
 
-Introduces a new action *ReviseSelection* which copies any selected code into a comment immediately above the selection, to remind you of what the code used to look like.
+Introduces a new action *!ReviseSelection* which copies any selected code into a comment immediately above the selection, to remind you of what the code used to look like.
 
 === Configuration ===
 
- * [http://community.devexpress.com/blogs/rorybecker/archive/2010/10/05/binding-keys-in-coderush.aspx Bind a key] to the *ReviseSelection* action
+ * [http://community.devexpress.com/blogs/rorybecker/archive/2010/10/05/binding-keys-in-coderush.aspx Bind a key] to the *!ReviseSelection* action
 
 === Usage ===
 
  * Highlight code 
- * Trigger *ReviseSelection* using the key bound in configuration
+ * Trigger *!ReviseSelection* using the key bound in configuration
 
 === Notes ===
-This plugin was built in 13 minutes during a live Devexpress Webinar. 
+This plugin was built in 13 minutes during a live !DevExpress Webinar. 
 
 The recorded version of this webinar is [http://tv.devexpress.com/#CRPluginsTextDocTextView available here] with the portion relevant to this plugin starting at 1 hour and 6 minute in.
 
