--- a/wiki/RenameXamlNamespacePrefix.wiki
+++ b/wiki/RenameXamlNamespacePrefix.wiki
@@ -1,6 +1,6 @@
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/RenameXamlNamespacePrefix/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Requires DXCore 10.2 since build =====
+===== Requires DXCore 10.2 since build 1758 =====
 === Introduction ===
 
 === Usage ===
