--- a/wiki/RenameXamlNamespacePrefix.wiki
+++ b/wiki/RenameXamlNamespacePrefix.wiki
@@ -2,8 +2,10 @@
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 ===== Requires DXCore 10.2 since build 1758 =====
 === Introduction ===
+Provides a refactoring that renames XAML namespace prefixes. 
 
 === Usage ===
+Just place the caret on the namespace prefix, hit the CodeRush/Refactor key, and choose Rename XAML Namespace Prefix.
 
 === Credits ===
 
