--- a/wiki/CR_StringFormatter.wiki
+++ b/wiki/CR_StringFormatter.wiki
@@ -1,7 +1,7 @@
 #summary Provides a Tab to Next Reference extension, a CodeIssue and a Builder dialog to aid productivity in the area of String.Format string tokens.
 [http://www.rorybecker.co.uk/DevExpress/Plugins/Community/CR_StringFormatter/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Requires DXCore 10.2 since build =====
+===== Requires DXCore 11.1 =====
 === Introduction ===
 This plugin provides 3 enhancements:
 
