Edited wiki page CR_RemoveOuterBlock through web user interface.

--- a/wiki/CR_RemoveOuterBlock.wiki
+++ b/wiki/CR_RemoveOuterBlock.wiki
@@ -3,14 +3,14 @@
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 ===== Requires DXCore 11.1 =====
 === Introduction ===
-This plugin provides a CodeProvider "Remove Outer Block" which will remove a block of code and replace it with it's own contents.
+This plugin provides a !CodeProvider "Remove Outer Block" which will remove a block of code and replace it with it's own contents.
 
-Note: This plugin is intended to be used during the process of sculpting code. Since it provides a CodeProvider and not a refactoring, it is entirely possible for it to produce uncompilable code. 
+Note: This plugin is intended to be used during the process of sculpting code. Since it provides a !CodeProvider and not a Refactoring, it is entirely possible for it to produce uncompilable code. 
 
 === Usage ===
-Position your caret on a statement that parents another (If, While, ForEach, Try..Catch etc) and choose the "Remove Outer Block" option from the Code menu. The CodeProvider will then remove the outer block leaving the contained code in it's place.
+Position your caret on a statement that parents another (If, While, !ForEach, Try..Catch etc) and choose the "Remove Outer Block" option from the Code menu. The !CodeProvider will then remove the outer block leaving the contained code in it's place.
 
-Note: This CodeProvider will operate on all related siblings of the initial parenting statement, removing all structure but leaving all content. The one exception to this is the *catch* portion of a Try..Catch or Try..Catch..Finally which will be removed in it's entity.
+Note: This !CodeProvider will operate on all related siblings of the initial parenting statement, removing all structure but leaving all content. The one exception to this is the *catch* portion of a Try..Catch or Try..Catch..Finally which will be removed in it's entity.
 
 === Examples ===
 
